<resources>
    <string name="app_name">Converter</string>
    <string name="conversion">Conversion</string>
    <string name="kilometers_to_miles">Kilometers to Miles</string>
    <string name="miles_to_kilometers">Miles to Kilometers</string>
    <string name="miles_value">Miles Value:</string>
    <string name="convert">Convert</string>
    <string name="kilometers_value">Kilometers Value:</string>
    <string name="conversion_history">Conversion History:</string>
    <string name="clear">Clear</string>
</resources>