<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/conversionTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/conversion"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/milesTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_value"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/milesInput"
        app:layout_constraintStart_toStartOf="@+id/conversionTextview" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="convertClicked"
        android:text="@string/convert"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/milesInput"
        app:layout_constraintStart_toStartOf="@+id/milesTextview"
        app:layout_constraintTop_toBottomOf="@+id/milesTextview" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/miKiRadioButton"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conversionTextview">

        <RadioButton
            android:id="@+id/miKiRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioOnClick"
            android:text="@string/miles_to_kilometers"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/kiMiRadiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioOnClick"
            android:text="@string/kilometers_to_miles"
            android:textAlignment="center"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/kilometerTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilometers_value"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/kilometerInput"
        app:layout_constraintStart_toStartOf="@+id/milesTextview" />

    <TextView
        android:id="@+id/conversionHistoryTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/conversion_history"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/kilometerTextview"
        app:layout_constraintTop_toBottomOf="@+id/kilometerTextview" />

    <TextView
        android:id="@+id/historyTextview"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="@+id/kilometerInput"
        app:layout_constraintStart_toStartOf="@+id/kilometerTextview"
        app:layout_constraintTop_toBottomOf="@+id/conversionHistoryTextview" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="clearClicked"
        android:text="@string/clear"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/historyTextview"
        app:layout_constraintStart_toStartOf="@+id/historyTextview"
        app:layout_constraintTop_toBottomOf="@+id/historyTextview" />

    <EditText
        android:id="@+id/milesInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:inputType="numberSigned|number|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/milesTextview"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/kilometerInput"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:inputType="numberSigned|number|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/milesInput"
        app:layout_constraintStart_toStartOf="@+id/milesInput"
        app:layout_constraintTop_toBottomOf="@+id/convertButton" />

</androidx.constraintlayout.widget.ConstraintLayout>